# libmatfile

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
doc/: Doxyfile.in
include/matfile/: matfile.h  tape.h
src/: main.cc  matfile.c  tape.c
test/: main.cc  reader.cc  writer.cc
